objects/QAobj501__c.object
<CustomObject>
    <fields>
        <fullName>F2__c</fullName>
        <label>F2</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>F3__c</fullName>
        <description>axzcv v</description>
        <label>F3</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>f1__c</fullName>
        <label>f1</label>
        <type>Phone</type>
    </fields>
</CustomObject>